# tankbobs

./: README  README.md  SoundCredit.txt  contributors.txt  count.sh  lua.sh
tankbobs/: .gitignore  BUILDFILES  CMakeLists.txt  DEPENDENCIES  INSTALL  Makefile  NOTICE  README  VERSION  build.sh  modules  modules-win  modules64  modules64-win
tankbobs-editor/: Makefile  TODO  (+20 more)
tankbobs/data/: default_conf.xml  default_conf_server.xml
tankbobs/data-src/: abstract.xcf  tank.xcf
tankbobs/data-src/audio/game/: collide.aup  collideProjectile.aup  collideProjectile2.aup  collideProjectile3.aup  collideProjectile4.aup  collideProjectile5.aup  collideProjectile6.aup  damage.aup  die.aup  explode.aup  flagCapture.aup  powerupSpawn.aup  teleport.aup  trigger.aup  win.aup
tankbobs/data-src/audio/game/collideProjectile2_data/e00/d00/: e0000044.au  e0000352.au  e0000448.au  e0000cd9.au  e0000d79.au
tankbobs/data-src/audio/game/collideProjectile3_data/e00/d00/: e0000551.au  e00009da.au
tankbobs/data-src/audio/game/collideProjectile4_data/e00/d00/: e0000584.au
tankbobs/data-src/audio/game/collideProjectile5_data/e00/d00/: e00002ab.au  e0000b73.au
tankbobs/data-src/audio/game/collideProjectile6_data/e00/d00/: e0000872.au
tankbobs/data-src/audio/game/collideProjectile_data/e00/d00/: e00006c6.au  e00008c7.au
tankbobs/data-src/audio/game/collide_data/e00/d00/: e0000215.au  e000036d.au  e000062f.au  e0000bad.au  e0000de9.au
tankbobs/data-src/audio/game/controlPoint_data/e00/d00/: e000002e.au  e00004aa.au  e0000c1e.au
tankbobs/data-src/audio/game/damage_data/e00/d00/: e000041d.au  e0000445.au
tankbobs/data-src/audio/game/die_data/e00/d00/: e00000b1.au  e00000d7.au  e00001d9.au  e000037c.au  e0000392.au  e0000858.au  e00009fd.au  e0000fa3.au
tankbobs/data-src/audio/game/explode_data/e00/d00/: e0000348.au  e0000774.au
tankbobs/data-src/audio/game/flagCapture_data/e00/d00/: e00000a9.au  e000029b.au  e0000309.au  e000037e.au  e00008e3.au
tankbobs/data-src/audio/game/powerupSpawn_data/e00/d00/: e0000327.au
tankbobs/data-src/audio/game/teleport_data/e00/d00/: e000007d.au  e0000224.au  e0000291.au  e000039d.au  e0000461.au  e0000e21.au
tankbobs/data-src/audio/game/trigger_data/e00/d00/: e0000229.au  e0000294.au  e00007cb.au  e00008b0.au  e0000a35.au  e0000a5c.au  e0000ba1.au  e0000e81.au
tankbobs/data-src/audio/game/win_data/e00/d00/: e00008ac.au  e000092d.au
tankbobs/data-src/audio/songs/: null.aup
tankbobs/data-src/audio/weapons/: coilgun-reload.aup  coilgun.aup  coilgun2.aup  laser-gun.aup  machinegun.aup  machinegun2.aup  plasma-gun-reload.aup  plasma-gun.aup  railgun-reload.aup  railgun.aup  railgun2.aup  reload.aup  rocket-launcher.aup  saw-begin.aup  saw-end.aup  saw.aup  shotgun-close.aup  shotgun-open.aup  shotgun-reload.aup  shotgun.aup  shotgun2.aup  weak-machinegun.aup
tankbobs/data-src/audio/weapons/coilgun-reload_data/e00/d00/: e0000263.au
tankbobs/data-src/audio/weapons/coilgun2_data/e00/d00/: e0000343.au
tankbobs/data-src/audio/weapons/coilgun_data/e00/d00/: e0000c39.au
tankbobs/data-src/textures/: healthbar.xcf  healthbarBorder.xcf
tankbobs/data-src/textures/game/: controlPoint.xcf  deadTank.xcf  explosion.xcf  flag.xcf  flagBase.xcf  powerup.xcf  scale.xcf  scaleCenter.xcf  tank.xcf  tankBorder.xcf  tankShield.xcf  tankTagged.xcf
tankbobs/data-src/textures/game/weapons/: coilgun.xcf  laser-gun-projectile.xcf  laser-gun.xcf  machinegun-projectile.xcf  machinegun.xcf  plasma-gun.xcf  railgun-projectile.xcf  railgun.xcf  rocket-launcher.xcf  saw.xcf  shotgun-projectile.xcf  shotgun.xcf  weak-machinegun-projectile.xcf  weak-machinegun.xcf
tankbobs/data-src/textures/global/: abstract.xcf  arrow.xcf  barb_nt.xcf  blackabstract.xcf  blackabstract_circle.xcf  bluewall.xcf  brownish.xcf  brownish2.xcf  darkbluerough.xcf  energetic_diamond.xcf  finish.xcf  glass.xcf  glass2.xcf  glass3.xcf  grad_blue.xcf  grad_green.xcf  metal.xcf  null.xcf  screen.xcf  teleporter.xcf  temporary1.xcf  temporary2.xcf
tankbobs/data-src/textures/weapons/: shotgun.xcf
tankbobs/data/modules64/: lxp.so.1  lxp.so.1.1.0
tankbobs/data/scripts/: official.lua
tankbobs/data/sets/: set-bob.txt  set-large.txt  set-medium.txt  set-misc.txt  set-small.txt  set-tutorial.txt
tankbobs/data/tcm/: bob_1.trm  bob_2.trm  bob_3.trm  large_1.trm  medium_1.trm  medium_2.trm  race_1.trm  small_1.trm  small_2.trm  spree.trm  test.trm  tutorial_1.trm
tankbobs/misc/: luagl.patch
tankbobs/mod-client/: reset-last-map.lua  tutorial-no-options.lua
tankbobs/mod-client-disabled/: keylayout-template.lua  megabot.lua
tankbobs/src/client/: client.c  game.lua  gui.lua  init.lua  main.lua  renderer.lua  st_background.lua  st_exit.lua  st_help.lua  st_internet.lua  st_level.lua  st_license.lua  st_manual.lua  st_online.lua  st_options.lua  st_play.lua  st_selected.lua  st_set.lua  st_start.lua  st_title.lua
tankbobs/src/common/: c_ai.lua  c_class.lua  c_config.lua  c_const.lua  c_data.lua  c_files.lua  c_math.lua  c_mods.lua  c_module.lua  c_protocol.lua  c_state.lua  c_tcm.lua  c_weapon.lua  c_world.lua  common.h  common.lua  lom.lua  m_audio.c  m_console.c  m_fs.c  m_input.c  m_io.c  m_math.c  m_net.c  m_renderer.c  m_tankbobs.c  m_tankbobs.h  m_world.cpp  util.c  util.h
tankbobs/src/lib/: crossdll.c  crossdll.h
tankbobs/src/lib/Box2D/: Box2D.txt  CMakeLists.txt  README_FIRST.txt
tankbobs/src/lib/Box2D/Collision/Shapes/: b2LoopShape.cpp
tankbobs/src/lib/Box2D/Common/: b2GrowableStack.h  b2Settings.h
tankbobs/src/lib/Box2D/Source/: Makefile
tankbobs/src/lib/Box2D/Source/Collision/: b2BroadPhase.cpp  b2TimeOfImpact.cpp
tankbobs/src/lib/Box2D/Source/Common/: b2BlockAllocator.cpp  b2Settings.h
tankbobs/src/lib/LuaJIT/: Makefile
tankbobs/src/lib/LuaJIT/src/: Makefile
tankbobs/src/lib/physfs-2.0.0/: CMakeLists.txt
tankbobs/src/lib/physfs-2.0.0/archivers/: wad.c
tankbobs/src/lib/tstr/: tstr.c  tstr.h
tankbobs/src/server/: client.lua  commands.lua  init.lua  main.lua  server.c  st_exit.lua  st_main.lua
tankbobs/src/trmc/: trmc.c
tankbobs/src/tstr/: tstr.c  tstr.h
(+68 files in other folders)
